Fix glibc downloads
- Bump version to 2.23-r1 from 2.21-rc2
- Use signed packages

--- a/alpine/java/orajdk8/Dockerfile
+++ b/alpine/java/orajdk8/Dockerfile
@@ -1,8 +1,8 @@
 FROM nowait/alpine:3.3
 MAINTAINER Nowait <devops@nowait.com>
 
-ENV PKG_URL="https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64" \
-    GLIBC_VER=2.21-r2 \
+ENV PKG_URL="https://github.com/andyshinn/alpine-pkg-glibc/releases/download/" \
+    GLIBC_VER=2.23-r1 \
     JAVA_VERSION_MAJOR=8 \
     JAVA_VERSION_MINOR=73 \
     JAVA_VERSION_BUILD=02 \
@@ -14,9 +14,10 @@ ENV PATH=${PATH}:${JAVA_HOME}/bin \
 
 RUN apk update && \
     apk add bash ca-certificates curl && \
-    curl -sSL --output /tmp/glibc-${GLIBC_VER}.apk "${PKG_URL}/glibc-${GLIBC_VER}.apk" && \
-    curl -sSL --output /tmp/glibc-bin-${GLIBC_VER}.apk "${PKG_URL}/glibc-bin-${GLIBC_VER}.apk" && \
-    apk --no-cache add --allow-untrusted /tmp/glibc-${GLIBC_VER}.apk /tmp/glibc-bin-${GLIBC_VER}.apk && \
+    wget -q -O /etc/apk/keys/andyshinn.rsa.pub https://raw.githubusercontent.com/andyshinn/alpine-pkg-glibc/master/andyshinn.rsa.pub && \
+    curl -sSL --output /tmp/glibc-${GLIBC_VER}.apk "${PKG_URL}/${GLIBC_VER}/glibc-${GLIBC_VER}.apk" && \
+    curl -sSL --output /tmp/glibc-bin-${GLIBC_VER}.apk "${PKG_URL}/${GLIBC_VER}/glibc-bin-${GLIBC_VER}.apk" && \
+    apk --no-cache add /tmp/glibc-${GLIBC_VER}.apk /tmp/glibc-bin-${GLIBC_VER}.apk && \
     /usr/glibc/usr/bin/ldconfig /lib /usr/glibc/usr/lib && \
     mkdir -p ${JAVA_BASE} && \
     curl -sSL --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/${JAVA_PKG}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz | tar zxf - -C $JAVA_BASE && \
