Fixed apache configuration issues.
- Set ServerName to localhost to avoid startup errors
- Do not specify dumb-init in entrypoint, as it's passed from
  nowait/alpine.  Just use cmd
- Add apache.conf to 7.0 image for logging and ServerName

--- a/alpine/php/5.6/apache/Dockerfile
+++ b/alpine/php/5.6/apache/Dockerfile
@@ -8,5 +8,4 @@ COPY apache.conf /etc/apache2/conf.d/docker.conf
 
 EXPOSE 80
 
-ENTRYPOINT ["dumb-init","/usr/sbin/httpd"]
-CMD ["-DFOREGROUND"]
+CMD ["/usr/sbin/httpd","-DFOREGROUND"]
