Remove dumb-init entrypoint, as it comes from the base image.  It now just uses cmd.  Remove the step to change docker-entrypoint.sh permissions and use the permissions already set on the file (+x).

--- a/alpine/jenkins/1.642.2/Dockerfile
+++ b/alpine/jenkins/1.642.2/Dockerfile
@@ -21,10 +21,8 @@ RUN apk --no-cache add curl ttf-dejavu git openssh && \
 EXPOSE 8080 50000
 
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-RUN chown ${JENKINS_USER}:${JENKINS_GROUP} /usr/local/bin/docker-entrypoint.sh && \
-    chmod +x /usr/local/bin/docker-entrypoint.sh
+RUN chown ${JENKINS_USER}:${JENKINS_GROUP} /usr/local/bin/docker-entrypoint.sh
 
 USER ${JENKINS_USER}
 
-ENTRYPOINT ["dumb-init","/usr/local/bin/docker-entrypoint.sh"]
-CMD [""]
+CMD ["/usr/local/bin/docker-entrypoint.sh"]
