Remove dumb-init entrypoint and use cmd as that is passed down from the base image.

--- a/ubuntu/php/5.6/apache/Dockerfile
+++ b/ubuntu/php/5.6/apache/Dockerfile
@@ -17,5 +17,4 @@ RUN a2enconf docker && \
 
 EXPOSE 80
 
-ENTRYPOINT ["dumb-init","/usr/sbin/apache2ctl"]
-CMD ["-DFOREGROUND"]
+CMD ["/usr/sbin/apache2ctl","-DFOREGROUND"]
