--- a/ubuntu/php/7.0/apache/Dockerfile
+++ b/ubuntu/php/7.0/apache/Dockerfile
@@ -17,5 +17,4 @@ RUN a2enconf docker && \
 
 EXPOSE 80
 
-ENTRYPOINT ["dumb-init","/usr/sbin/apache2ctl"]
-CMD ["-DFOREGROUND"]
+CMD ["/usr/sbin/apache2ctl","-DFOREGROUND"]
