--- a/ubuntu/php/7.0/cli/Dockerfile
+++ b/ubuntu/php/7.0/cli/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && \
     apt-get install -y language-pack-en-base && \
     LC_ALL=en_US.UTF-8 add-apt-repository ppa:ondrej/php && \
     apt-get update && \
-    apt-get install -y apache2 php7.0-cli php7.0-mysql && \
+    apt-get install -y php7.0-cli php7.0-mysql && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
