--- a/alpine/elasticsearch/2.x/conf.d/elasticsearch.toml
+++ b/alpine/elasticsearch/2.x/conf.d/elasticsearch.toml
@@ -1,4 +1,8 @@
 [template]
 src = "elasticsearch.yml.tmpl"
 dest = "./config/elasticsearch.yml"
-keys = []
+keys = [
+  "/self/container/primary_ip",
+  "/self/service",
+  "/containers",
+]
