Updates confd version Updates clustering template

--- a/alpine/elasticsearch/2.x/Dockerfile
+++ b/alpine/elasticsearch/2.x/Dockerfile
@@ -2,7 +2,7 @@ FROM nowait/java:openjre8-alpine
 MAINTAINER Nowait <devops@nowait.com>
 
 ENV ELASTICSEARCH_VERSION 2.3.2
-ENV CONFD_VERSION 0.11.0
+ENV CONFD_VERSION 0.12.0-alpha3
 ENV CONFD_BACKEND env
 
 RUN \
