Adds cluster service env variable Updates template to use env variable to determine where to locate master servers

--- a/alpine/elasticsearch/2.x/Dockerfile
+++ b/alpine/elasticsearch/2.x/Dockerfile
@@ -26,7 +26,8 @@ ENV PATH=/opt/elasticsearch/bin:/opt::$PATH \
     ES_MASTER=true \
     ES_DATA=true \
     ES_DATA_PATH="./data" \
-    ES_CLUSTER_NAME=""
+    ES_CLUSTER_NAME="" \
+    ES_CLUSTER_SERVICE="ElasticSearchMaster"
 
 WORKDIR /opt/elasticsearch
 
