Moves ownership setting and removes chmod 777 call

--- a/alpine/rabbitmq/3.6.x/Dockerfile
+++ b/alpine/rabbitmq/3.6.x/Dockerfile
@@ -14,9 +14,7 @@ RUN apk add --update --no-cache ca-certificates curl tar xz su-exec util-linux &
     curl -sSL https://www.rabbitmq.com/releases/rabbitmq-server/v${RABBITMQ_VERSION}/rabbitmq-server-generic-unix-${RABBITMQ_VERSION}.tar.xz | tar -xJ -C /opt/rabbitmq --strip-components 1 && \
     rm -rf /share/**/rabbitmq*.xz && \
     addgroup rabbitmq && \
-    adduser -SD rabbitmq -G rabbitmq -h /opt/rabbitmq && \
-    chown -R rabbitmq:rabbitmq /opt/rabbitmq && \
-    chmod 777 /opt/rabbitmq
+    adduser -SD rabbitmq -G rabbitmq -h /opt/rabbitmq
 
 COPY plugins /opt/rabbitmq/plugins
 COPY scripts /opt/scripts
@@ -27,8 +25,7 @@ EXPOSE 4369 5671 5672 15671 15672 25672
 
 COPY docker-entrypoint.sh /
 
-RUN chown -R rabbitmq:rabbitmq /opt/rabbitmq/plugins && \
-    chown -R rabbitmq:rabbitmq /opt/scripts && \
+RUN chown -R rabbitmq:rabbitmq /opt/rabbitmq && \
     chmod +x /docker-entrypoint.sh && \
     chmod -R +x /opt/scripts
 
