setting user and group ids manually for ownership changes

--- a/alpine/rabbitmq/3.6.x/Dockerfile
+++ b/alpine/rabbitmq/3.6.x/Dockerfile
@@ -13,8 +13,8 @@ RUN apk add --update --no-cache ca-certificates curl tar xz su-exec util-linux &
     mkdir -p /opt/rabbitmq && \
     curl -sSL https://www.rabbitmq.com/releases/rabbitmq-server/v${RABBITMQ_VERSION}/rabbitmq-server-generic-unix-${RABBITMQ_VERSION}.tar.xz | tar -xJ -C /opt/rabbitmq --strip-components 1 && \
     rm -rf /share/**/rabbitmq*.xz && \
-    addgroup rabbitmq && \
-    adduser -SD rabbitmq -G rabbitmq -h /opt/rabbitmq
+    addgroup -g 199 rabbitmq && \
+    adduser -SD -u 1999 rabbitmq -G rabbitmq -h /opt/rabbitmq
 
 COPY plugins /opt/rabbitmq/plugins
 COPY scripts /opt/scripts
@@ -25,7 +25,7 @@ EXPOSE 4369 5671 5672 15671 15672 25672
 
 COPY docker-entrypoint.sh /
 
-RUN chown -R $(id -u rabbitmq):$(id -g rabbitmq) /opt/rabbitmq && \
+RUN chown -R 199:1999 /opt/rabbitmq && \
     chmod +x /docker-entrypoint.sh && \
     chmod -R +x /opt/scripts
 
