Adds ca certificates

--- a/alpine/cron/Dockerfile
+++ b/alpine/cron/Dockerfile
@@ -1,5 +1,6 @@
 FROM nowait/alpine:latest
 MAINTAINER Nowait <devops@nowait.com>
+RUN apk add --update ca-certificates 
 
 COPY rancher_cron /rancher_cron
 RUN chmod +x /rancher_cron
