--- a/alpine/php/5.6/composer/Dockerfile
+++ b/alpine/php/5.6/composer/Dockerfile
@@ -1,9 +1,9 @@
 FROM nowait/php:5.6-cli-alpine
 MAINTAINER Nowait <devops@nowait.com>
 
-ENV COMPOSER_VERSION=1.1.2
+ENV COMPOSER_VERSION=1.1.3
 
-RUN apk add --no-cache curl php php-json php-phar php-openssl && \
+RUN apk add --no-cache curl php php-json php-phar php-openssl git && \
     curl -sS https://getcomposer.org/installer | php -- \
     --install-dir=/usr/local/bin --filename=composer --version=$COMPOSER_VERSION && \
     apk del curl
