--- a/alpine/php/7.0/composer/Dockerfile
+++ b/alpine/php/7.0/composer/Dockerfile
@@ -1,10 +1,10 @@
 FROM nowait/php:7.0-cli-alpine
 MAINTAINER Nowait <devops@nowait.com>
 
-ENV COMPOSER_VERSION=1.1.2
+ENV COMPOSER_VERSION=1.1.3
 
 # Currently can't install composer from a package, as it's built on php5
-RUN apk add --no-cache curl php7 php7-json php7-phar php7-openssl php7-mbstring && \
+RUN apk add --no-cache curl php7 php7-json php7-phar php7-openssl php7-mbstring git && \
     curl -sS https://getcomposer.org/installer | php7 -- \
     --install-dir=/usr/local/bin --filename=composer --version=$COMPOSER_VERSION && \
     ln -sf /usr/bin/php7 /usr/bin/php && \
