Prevent apache from logging ELB health checks

--- a/alpine/php/7.0/apache/apache.conf
+++ b/alpine/php/7.0/apache/apache.conf
@@ -3,5 +3,8 @@ ServerName localhost
 LogFormat "{ \"time\":\"%t\", \"xForwardFor\":\"%{X-Forwarded-For}i\", \"clientIP\":\"%a\", \"host\":\"%V\", \"request\":\"%U\", \"query\":\"%q\", \"method\":\"%m\", \"status\":\"%>s\", \"userAgent\":\"%{User-agent}i\", \"referer\":\"%{Referer}i\" }" jsonLog
 ErrorLogFormat "{ \"time\":\"%t\", \"loglevel\":\"%l\", \"pid\":\"%P\", \"filename\":\"%F\", \"errorcode\":\"%E\", \"clientIP\":\"%a\", \"xForwardFor\":\"%{X-Forwarded-For}i\", \"errormsg\":\"%M\" }"
 
-CustomLog /dev/stdout jsonLog
+SetEnvIf User-Agent "-" dontlog
+SetEnvIf User-Agent "^ELB-HealthCheck" dontlog
+
+CustomLog /dev/stdout jsonLog env=!dontlog
 ErrorLog /dev/stderr
