Add marvel to elasticsearch image

--- a/alpine/elasticsearch/2.x/Dockerfile
+++ b/alpine/elasticsearch/2.x/Dockerfile
@@ -21,7 +21,9 @@ RUN apk add --no-cache ca-certificates curl su-exec && \
     mv elasticsearch-$ELASTICSEARCH_VERSION /opt/elasticsearch && \
     addgroup elasticsearch && \
     adduser -SDH elasticsearch -G elasticsearch && \
-    /opt/elasticsearch/bin/plugin install cloud-aws
+    /opt/elasticsearch/bin/plugin install cloud-aws && \
+    /opt/elasticsearch/bin/plugin install license && \
+    /opt/elasticsearch/bin/plugin install marvel-agent
 
 RUN curl -L https://github.com/kelseyhightower/confd/releases/download/v$CONFD_VERSION/confd-$CONFD_VERSION-linux-amd64 > /opt/confd && \
     chmod +x /opt/confd
