Remove repeated log messages and force rsyslog to log to stdout

--- a/ubuntu/rsyslog-logzio/rsyslog.conf
+++ b/ubuntu/rsyslog-logzio/rsyslog.conf
@@ -34,7 +34,7 @@ $InputTCPServerRun 514
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 
 # Filter duplicated messages
-$RepeatedMsgReduction on
+$RepeatedMsgReduction off
 
 #
 # Set the default permissions for all log files.
