--- a/alpine/php/7.0/apache/apache.conf
+++ b/alpine/php/7.0/apache/apache.conf
@@ -1,7 +1,7 @@
 ServerName localhost
 
 LogFormat "{ \"time\":\"%t\", \"xForwardFor\":\"%{X-Forwarded-For}i\", \"clientIP\":\"%a\", \"host\":\"%V\", \"request\":\"%U\", \"query\":\"%q\", \"method\":\"%m\", \"status\":\"%>s\", \"userAgent\":\"%{User-agent}i\", \"referer\":\"%{Referer}i\" }" jsonLog
-ErrorLogFormat "{ \"time\":\"%t\", \"loglevel\":\"%l\", \"pid\":\"%P\", \"filename\":\"%F\", \"errorcode\":\"%E\", \"clientIP\":\"%a\", \"xForwardFor\":\"%{X-Forwarded-For}i\", \"errormsg\":\"%M\" }"
+ErrorLogFormat "%M"
 
 <IfModule mod_reqtimeout.c>
   RequestReadTimeout header=65 body=65
