Add liveness check to base apache image

--- a/alpine/php/7.0/apache/Dockerfile
+++ b/alpine/php/7.0/apache/Dockerfile
@@ -3,9 +3,12 @@ MAINTAINER Nowait <devops@nowait.com>
 
 RUN apk --no-cache add 'php7-apache2<7.1' && \
     mkdir -p /run/apache2 && \
-    ln -s /dev/null /var/log/apache2/access_log 
+    ln -s /dev/null /var/log/apache2/access_log && \
+    mkdir -p /etc/apache2/conf.d/root
 
 COPY apache.conf /etc/apache2/conf.d/docker.conf
+COPY liveness.conf /etc/apache2/conf.d/
+COPY liveness.php /etc/apache2/conf.d/root/
 
 EXPOSE 80
 
