--- a/ubuntu/rsyslog-logzio/rsyslog.conf
+++ b/ubuntu/rsyslog-logzio/rsyslog.conf
@@ -11,8 +11,6 @@
 #################
 
 $ModLoad imuxsock # provides support for local system logging
-#$ModLoad imklog   # provides kernel logging support (previously done by rklogd)
-#$ModLoad immark  # provides --MARK-- message capability
 
 # provides UDP syslog reception
 $ModLoad imudp
@@ -44,8 +42,6 @@ $FileGroup adm
 $FileCreateMode 0640
 $DirCreateMode 0755
 $Umask 0022
-#$PrivDropToUser syslog
-#$PrivDropToGroup syslog
 
 #
 # Where to place spool files
@@ -57,5 +53,5 @@ $WorkDirectory /var/spool/rsyslog
 #
 $IncludeConfig /etc/rsyslog.d/*.conf
 
-$template logzFormatFileTagName,"[%LOGZIO_TOKEN%] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=TYPE] %syslogtag%  %msg%\n"
+$template logzFormatFileTagName,"[%LOGZIO_TOKEN%] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=%TYPE%] %syslogtag%  %msg%\n"
 *.* @@listener.logz.io:5000;logzFormatFileTagName
