--- a/ubuntu/rsyslog-logzio/rsyslog.conf
+++ b/ubuntu/rsyslog-logzio/rsyslog.conf
@@ -53,5 +53,12 @@ $WorkDirectory /var/spool/rsyslog
 #
 $IncludeConfig /etc/rsyslog.d/*.conf
 
-$template logzFormatFileTagName,"[%LOGZIO_TOKEN%] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=%TYPE%] %syslogtag%  %msg%\n"
-*.* @@listener.logz.io:5000;logzFormatFileTagName
+if (%LOG_FORMAT% == 'json') then {
+    $template logzFormatFile_TAG_NAME,"{ \"token\": \"%LOGZIO_TOKEN%\", \"type\": \"%TYPE%\", %msg:2:$%\n"
+    *.* @@listener.logz.io:5050;logzFormatFileTagName
+}
+else (%LOG_FORMAT% == 'syslog') {
+    $template logzFormatFileTagName,"[%LOGZIO_TOKEN%] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=%TYPE%] %syslogtag%  %msg%\n"
+    *.* @@listener.logz.io:5000;logzFormatFileTagName
+}
+
