Always redirect to https

--- a/alpine/php/7.0/apache/apache.conf
+++ b/alpine/php/7.0/apache/apache.conf
@@ -7,6 +7,12 @@ ErrorLogFormat "{ \"time\":\"%t\", \"loglevel\":\"%l\", \"pid\":\"%P\", \"filena
   RequestReadTimeout header=65 body=65
 </IfModule>
 
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteCond %{HTTP:X-Forwarded-Proto} =http
+  RewriteRule . https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
+</IfModule>
+
 SetEnvIf Remote_Addr "::1" dontlog
 
 CustomLog /dev/stdout jsonLog env=!dontlog
