Lock down python version

--- a/ubuntu/python/2.x/cli/Dockerfile
+++ b/ubuntu/python/2.x/cli/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONPATH=/src/vendor/lib/python2.7/site-packages:$PYTHONPATH
 RUN apt-get update && \
     apt-get install -y \
     build-essential \
-    python \
+    python=2.7.11-1 \
     gettext
 
 CMD ["python", "--version"]
