--- a/alpine/node/base/Dockerfile
+++ b/alpine/node/base/Dockerfile
@@ -1,21 +1,21 @@
 FROM nowait/alpine:3.3
 MAINTAINER Nowait "<devops@nowait.com>"
 
-ARG VERSION=v6.9.1
-ARG NPM_VERSION=3.10.8
+ARG VERSION=v7.7.3
+ARG NPM_VERSION=4.1.2
 ARG CONFIG_FLAGS="--fully-static --without-npm --with-intl=small-icu --download=all"
 ARG DEL_PKGS="libgcc libstdc++"
 ARG RM_DIRS=/usr/include
 
 RUN apk add --no-cache curl make gcc g++ python linux-headers paxctl libgcc libstdc++ gnupg && \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys 9554F04D7259F04124DE6B476D5A82AC7E37093B && \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys 94AE36675C464D64BAFA68DD7434390BDBE9B9C5 && \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys 0034A06D9D9B0064CE8ADF6BF1747F4AD2306D93 && \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys FD3A5288F042B6850C66B31F09FE44734EB7990E && \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys 71DCFD284A79C3B38668286BC97EC7A07EDE3FC1 && \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys DD8F2338BAE7501E3DD5AC78C273792F7D83545D && \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8 && \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B9AE9905FFD7803F25714661B63B535A4C206CA9 && \
+    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys \
+        94AE36675C464D64BAFA68DD7434390BDBE9B9C5 \
+        FD3A5288F042B6850C66B31F09FE44734EB7990E \
+        71DCFD284A79C3B38668286BC97EC7A07EDE3FC1 \
+        DD8F2338BAE7501E3DD5AC78C273792F7D83545D \
+        C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8 \
+        B9AE9905FFD7803F25714661B63B535A4C206CA9 \
+        56730D5401028683275BD23C23EFEFE93C4CFFFE && \
     curl -o node-${VERSION}.tar.gz -sSL https://nodejs.org/dist/${VERSION}/node-${VERSION}.tar.gz && \
     curl -o SHASUMS256.txt.asc -sSL https://nodejs.org/dist/${VERSION}/SHASUMS256.txt.asc && \
     gpg --verify SHASUMS256.txt.asc && \
