Do not log server-status requests

--- a/alpine/php/7.0/apache/apache.conf
+++ b/alpine/php/7.0/apache/apache.conf
@@ -8,6 +8,7 @@ ErrorLogFormat "{ \"time\":\"%t\", \"loglevel\":\"%l\", \"pid\":\"%P\", \"filena
 </IfModule>
 
 SetEnvIf Remote_Addr "::1" dontlog
+SetEnvIf Request_URI "/status" dontlog
 
 CustomLog /dev/stdout jsonLog env=!dontlog
 ErrorLog /dev/stderr
