--- a/alpine/php/7.0/cli/Dockerfile
+++ b/alpine/php/7.0/cli/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Nowait <devops@nowait.com>
 RUN echo http://dl-cdn.alpinelinux.org/alpine/edge/main >> /etc/apk/repositories && \
 echo http://dl-cdn.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
     echo http://dl-cdn.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories && \
-    apk --no-cache add 'php7=7.0.13-r1' && \
+    apk --no-cache add 'php7<7.1' && \
     ln -s /usr/bin/php7 /usr/bin/php
 
 CMD ["/usr/bin/php7","-v"]
