--- a/ubuntu/python/2.x/pip/Dockerfile
+++ b/ubuntu/python/2.x/pip/Dockerfile
@@ -1,4 +1,4 @@
-FROM nowait/python:2.7.12-cli-ubuntu
+FROM nowait/python:2.7.12-1-cli-ubuntu
 
 RUN apt-get update && \
     apt-get install -y \
@@ -7,6 +7,9 @@ RUN apt-get update && \
     libpq-dev \
     libxml2-dev \
     libxslt1-dev \
-    python-pip
+    python-pip && \
+    pip install --upgrade pip && \
+    pip install six
 
+ENTRYPOINT ["su-exec-entrypoint"]
 CMD ["pip", "-v"]
