Allow hostname to be configured via an env

--- a/ubuntu/rsyslog-logzio/Dockerfile
+++ b/ubuntu/rsyslog-logzio/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update && apt-get -y -q install software-properties-common python-software-properties
 RUN add-apt-repository ppa:adiscon/v8-stable
-RUN apt-get update && apt-get -y -q install rsyslog=8.23.0-0adiscon1trusty1
+RUN apt-get update && apt-get -y -q install rsyslog
 
 RUN rm /etc/rsyslog.conf
 
@@ -16,6 +16,7 @@ RUN ln -sf /dev/stdout /var/log/syslog \
 
 ENV LOGZIO_TOKEN="sample token" \
     TYPE="TYPE" \
-    LOG_FORMAT="json"
+    LOG_FORMAT="json" \
+    HOST_HOSTNAME="test-hostname"
 
 ENTRYPOINT ["/entrypoint.sh"]
