Teaches rsyslog to forward messages to fluentd as well as logz.io

--- a/ubuntu/rsyslog-logzio/rsyslog.conf
+++ b/ubuntu/rsyslog-logzio/rsyslog.conf
@@ -5,9 +5,9 @@ module(load="imudp")
 module(load="imuxsock")
 
 # rsyslog Input Modules
-input(type="imtcp" 
+input(type="imtcp"
 	 port="514")
-input(type="imudp" 
+input(type="imudp"
 	 port="514")
 
 template(name="json-tmpl"
@@ -25,3 +25,6 @@ if (getenv("LOG_FORMAT") == "json") then {
 } else {
     *.* action(type="omfwd" Target="listener.logz.io" Port="5000" Protocol="tcp" template="syslog-tmpl")
 }
+
+*.* action(type="omfwd" Target="127.0.0.1" Port="5140" Protocol="tcp")
+
