Update to get fluentd to build properly

--- a/debian/fluentd/Dockerfile
+++ b/debian/fluentd/Dockerfile
@@ -1,4 +1,4 @@
-FROM fluent/fluentd:v0.12.35-debian-onbuild
+FROM fluent/fluentd:v0.12.35-debian
 
 RUN mkdir -p /var/log/fluent/s3-buffer
 
@@ -9,3 +9,5 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev" \
  && apt-get install -y --no-install-recommends $buildDeps \
  && sudo gem install \
         fluent-plugin-s3
+
+COPY fluent.conf /fluentd/etc/fluent.conf
