--- a/debian/fluentd/fluent.conf
+++ b/debian/fluentd/fluent.conf
@@ -10,6 +10,8 @@
 <match **>
   @type s3
   path "logs"
+  aws_key_id "#{ENV['AWS_KEY_ID']}"
+  aws_sec_key "#{ENV['AWS_SEC_KEY']}"
   s3_bucket "#{ENV['S3_BUCKET']}"
   s3_region "us-east-1"
   s3_object_key_format "%{path}/%{time_slice}/#{Socket.gethostname}-%{index}.%{file_extension}"
