--- a/ubuntu/python/2.x/pip/Dockerfile
+++ b/ubuntu/python/2.x/pip/Dockerfile
@@ -1,4 +1,4 @@
-FROM nowait/python:2.7.12-1-cli-ubuntu
+FROM nowait/python:2.7.12-2-cli-ubuntu
 
 RUN apt-get update && \
     apt-get install -y \
@@ -8,8 +8,7 @@ RUN apt-get update && \
     libxml2-dev \
     libxslt1-dev \
     python-pip && \
-    pip install --upgrade pip && \
-    pip install six
+    pip install --upgrade pip
 
 ENTRYPOINT ["su-exec-entrypoint"]
 CMD ["pip", "-v"]
