Allow npm binaries to be ran without a full path

--- a/alpine/node/base/Dockerfile
+++ b/alpine/node/base/Dockerfile
@@ -42,5 +42,6 @@ RUN apk add --no-cache curl make gcc g++ python linux-headers paxctl libgcc libs
 
 EXPOSE 3000
 WORKDIR /src
+ENV PATH=/src/node_modules/.bin:$PATH
 
 CMD ["/usr/bin/node","-v"]
